--- a/demos/action-for-heroes/index.html
+++ b/demos/action-for-heroes/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="generatedBy" content="hand" />
-    <title>${bookTitle}${sectionTitle ? `: ${sectionTitle}` : ''}</title>
+    <title>Action for Heroes</title>
     <link rel="stylesheet" type="text/css" href="styles/a_default.css">
     <link rel="stylesheet" type="text/css" href="styles/app-toolbar.css">
     <link rel="stylesheet" type="text/css" href="styles/collapsible-panel.css">
