--- a/demos/action-for-heroes/index.html
+++ b/demos/action-for-heroes/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="styles/toolbar.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.classList.add('js');</script>
+
 </head>
 
 <body>
