--- a/demos/action-for-heroes/text/09-key-message-2-children-speak-out.html
+++ b/demos/action-for-heroes/text/09-key-message-2-children-speak-out.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en-us"><head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <meta name="generatedBy" content="hand">
     <title>Action for Heros: KEY MESSAGE 2 Children speak out</title>
@@ -14,6 +14,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/toolbar.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
