--- a/demos/action-for-heroes/text/22-links-to-my-hero-is-you-further-resources.html
+++ b/demos/action-for-heroes/text/22-links-to-my-hero-is-you-further-resources.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en-us" xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en-us"><head>
+<!DOCTYPE html><html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en-us"><head>
     <meta charset="utf-8">
     <meta name="generatedBy" content="hand">
     <title>Action for Heros: Links to My Hero is You
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/toolbar.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body class="epubtype-bodymatter">
