--- a/demos/action-for-heroes/text/17-key-message-7-living-with-heartache.html
+++ b/demos/action-for-heroes/text/17-key-message-7-living-with-heartache.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en-us"><head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
     <meta name="generatedBy" content="hand">
     <title>Action for Heros: KEY MESSAGE 7 Living with
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/toolbar.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body>
