Minor: clean up nav, about, and help files

--- a/demos/action-for-heroes/nav.html
+++ b/demos/action-for-heroes/nav.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8" />
     <meta name="generatedBy" content="DAISY WordToEPUB 1.0.5 With Pandoc 2.9.2.1" />
     <title>Action for Heros: Contents</title>
-    <link rel="stylesheet" type="text/css" href="styles/a_default.css" />
-    <link rel="stylesheet" type="text/css" href="styles/content.css" />
-    <link rel="stylesheet" type="text/css" href="styles/nav.css" />
+    <link rel="stylesheet" type="text/css" href="styles/a_default.css">
+    <link rel="stylesheet" type="text/css" href="styles/content.css">
+    <link rel="stylesheet" type="text/css" href="styles/layout.css">
+    <link rel="stylesheet" type="text/css" href="styles/nav.css">
+    <link rel="stylesheet" type="text/css" href="styles/theme.css">
 </head>
 
 <body class="center">
@@ -203,7 +205,7 @@
         <nav id="landmarks"
             class="epubtype-landmarks" 
             aria-labelledby="landmarks-title">
-            <p id="landmarks-title">Landmarks</p>
+            <h1 id="landmarks-title">Landmarks</h1>
             <ol>
                 <li>
                     <a href="index.html">Cover</a>
@@ -219,7 +221,7 @@
         <nav id="pagelist" 
             class="epubtype-pagelist"
             aria-labelledby="pagelist-title">
-            <p id="pagelist-title">Pages</p>
+            <h1 id="pagelist-title">Pages</h1>
             <ol>
                 <li>
                     <a href="text/00-frontmatter.html#page1">1</a>
