Style: button hover background is centered

--- a/demos/action-for-heroes/nav.html
+++ b/demos/action-for-heroes/nav.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/layout.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
     <link rel="stylesheet" type="text/css" href="styles/theme.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="center">
