Minor: insert toolbars before script element

--- a/demos/action-for-heroes/text/00-frontmatter.html
+++ b/demos/action-for-heroes/text/00-frontmatter.html
@@ -77,7 +77,7 @@
     </nav>
     
 
-<script type="module">
+<script type="module" id="initApp">
     import { setupUi } from '../js/app.js';
 
     (async () => {
