--- a/demos/action-for-heroes/text/10-key-message-3-coping-with-stress.html
+++ b/demos/action-for-heroes/text/10-key-message-3-coping-with-stress.html
@@ -219,7 +219,7 @@
     </nav>
     
 
-<script type="module">
+<script type="module" id="initApp">
     import { setupUi } from '../js/app.js';
 
     (async () => {
