--- a/demos/action-for-heroes/text/12.5-the-ario.html
+++ b/demos/action-for-heroes/text/12.5-the-ario.html
@@ -108,7 +108,7 @@
     </nav>
     
 
-<script type="module">
+<script type="module" id="initApp">
     import { setupUi } from '../js/app.js';
 
     (async () => {
