--- a/demos/action-for-heroes/text/14-the-ario.html
+++ b/demos/action-for-heroes/text/14-the-ario.html
@@ -104,7 +104,7 @@
     </nav>
     
 
-<script type="module">
+<script type="module" id="initApp">
     import { setupUi } from '../js/app.js';
 
     (async () => {
