--- a/demos/action-for-heroes/text/20-the-ario.html
+++ b/demos/action-for-heroes/text/20-the-ario.html
@@ -103,7 +103,7 @@
     </nav>
     
 
-<script type="module">
+<script type="module" id="initApp">
     import { setupUi } from '../js/app.js';
 
     (async () => {
