use unique classnames and IDs
prefix with "p4w-"

--- a/demos/action-for-heroes/nav.html
+++ b/demos/action-for-heroes/nav.html
@@ -16,7 +16,7 @@
 <body class="center">
     <main>
         <!-- index the navs if there's more than one -->
-        <nav id="list-of-navs">
+        <nav id="p4w-list-of-navs">
             <ol>
                 <li><a href="#toc">Table of Contents</a></li>
                 <li><a href="#landmarks">Landmarks</a></li>
