add p4w-js class to template and use throughout

--- a/demos/action-for-heroes/text/03-preparing-to-read-and-chat.html
+++ b/demos/action-for-heroes/text/03-preparing-to-read-and-chat.html
@@ -17,14 +17,14 @@
 
     <link rel="stylesheet" type="text/css" href="../styles/a_default.css">
 
-    <script>document.documentElement.classList.add('js');</script>
+    <script>document.documentElement.classList.add('p4w-js');</script>
 </head>
 
 <body>
     
     <main>
     <section id="preparing-to-read-and-chat" class="level2" data-number="1.3">
-    <h2 data-number="1.3" id="h-1.3">Preparing to read and CHAT<a href="#h-1.3" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+    <h2 data-number="1.3" id="h-1.3">Preparing to read and CHAT<a href="#h-1.3" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -32,7 +32,7 @@
             </g>
         </svg></a></h2>
     <section id="when-preparing-to-read-with-children-please-remember" class="level3" data-number="1.3.1">
-      <h3 data-number="1.3.1" id="h-1.3.1">When preparing to read with children, please remember:<a href="#h-1.3.1" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.1" id="h-1.3.1">When preparing to read with children, please remember:<a href="#h-1.3.1" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -65,7 +65,7 @@
       </ul>
     </section>
     <section id="it-is-time-to-chat-when-you-see" class="level3" data-number="1.3.2">
-      <h3 data-number="1.3.2" id="h-1.3.2">It is time to CHAT, when you see<a href="#h-1.3.2" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.2" id="h-1.3.2">It is time to CHAT, when you see<a href="#h-1.3.2" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -102,7 +102,7 @@
       </p>
     </section>
     <section id="sharing-information" class="level3" data-number="1.3.3">
-      <h3 data-number="1.3.3" id="h-1.3.3">Sharing information:<a href="#h-1.3.3" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.3" id="h-1.3.3">Sharing information:<a href="#h-1.3.3" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -113,7 +113,7 @@
       <p>The second direction for <b>CHATs</b> encourages adults to take the time to listen and hear what children feel and think about today’s changed life.</p>
     </section>
     <section id="hearing-children" class="level3" data-number="1.3.4">
-      <h3 data-number="1.3.4" id="h-1.3.4">Hearing children:<a href="#h-1.3.4" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.4" id="h-1.3.4">Hearing children:<a href="#h-1.3.4" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -162,7 +162,7 @@
       </p>
     </section>
     <section id="example-of-a-chat-that-hears-the-child" class="level3" data-number="1.3.5">
-      <h3 data-number="1.3.5" id="h-1.3.5">Example of a CHAT that HEARs the child:<a href="#h-1.3.5" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.5" id="h-1.3.5">Example of a CHAT that HEARs the child:<a href="#h-1.3.5" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -190,7 +190,7 @@
       <p>Salem’s Dad listened and encouraged Salem to share his feelings. He responded with kindness, support and accurate information. He offered to help Salem to find ways to feel safe at night. Salem responded positively and was encouraged to continue to CHAT.</p>
     </section>
     <section id="example-of-a-chat-where-a-child-is-not-heard" class="level3" data-number="1.3.6">
-      <h3 data-number="1.3.6" id="h-1.3.6">Example of a CHAT where a child is not heard:<a href="#h-1.3.6" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.6" id="h-1.3.6">Example of a CHAT where a child is not heard:<a href="#h-1.3.6" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -209,7 +209,7 @@
         <span role="doc-pagebreak" id="page8" aria-label="8"></span>The CHAT was quickly over. Clearly, this is not what we want. Salem ended the CHAT because, his feelings were turned off. Salem’s Dad did not hear his fear. His Dad wanted him to know he was safe and might have felt unsure how to discuss a difficult topic, so he gave Salem a quick answer. If Salem’s Dad wants to understand how Salem feels and encourage Salem to feel it is okay to share his feelings, his Dad needs to listen and respond to his feelings as he did in the first example.</p>
     </section>
     <section id="focus-on-the-key-messages" class="level3" data-number="1.3.7">
-      <h3 data-number="1.3.7" id="h-1.3.7">Focus on the key messages<a href="#h-1.3.7" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.7" id="h-1.3.7">Focus on the key messages<a href="#h-1.3.7" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -219,7 +219,7 @@
       <p>Whether we are chatting with one child or a group of children, in each CHAT adults will focus on essential messages and keep the CHATs brief to avoid losing the intensity of reading the story. Asking an open question like, “What makes you sad?” can be particularly challenging. Children could answer by talking about the coronavirus or about a bully at school. Adults keep each CHAT focused only on the message of that CHAT. Adults ask questions specific to that CHAT like, “What makes you sad about the coronavirus?” Children share. Adults listen and respond and share the message and lessons of each CHAT. Adults can offer to CHAT about other issues after reading the story book.</p>
     </section>
     <section id="length-of-chat" class="level3" data-number="1.3.8">
-      <h3 data-number="1.3.8" id="h-1.3.8">Length of CHAT<a href="#h-1.3.8" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.8" id="h-1.3.8">Length of CHAT<a href="#h-1.3.8" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -229,7 +229,7 @@
       <p>We want to give opportunities for all children to share their ideas and feelings. However, some children like to talk, some rarely want to talk and some talk too much. Adults will need to control the length of each CHAT. If a child is talking a lot, adults listen and remind them we want to go back to the story and arrange to talk more after they finish reading the story. Some children do not feel comfortable to speak. Best not to push them. This is story time and children can listen and learn and not everyone needs to talk.</p>
     </section>
     <section id="unique-chats" class="level3" data-number="1.3.9">
-      <h3 data-number="1.3.9" id="h-1.3.9">Unique CHATS<a href="#h-1.3.9" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.9" id="h-1.3.9">Unique CHATS<a href="#h-1.3.9" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -243,7 +243,7 @@
       <p>
         <span role="doc-pagebreak" id="page9" aria-label="9"></span>
       </p>
-      <h3 data-number="1.3.10" id="h-1.3.10">THE ARIO: Information for Adults<a href="#h-1.3.10" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.3.10" id="h-1.3.10">THE ARIO: Information for Adults<a href="#h-1.3.10" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -261,7 +261,7 @@
  
     
     <nav aria-label="Sections" id="p4w-document-links">
-        <a id="previous-section" href="02-chat-messages.html" title="Previous: CHAT messages" class="p4w-lightup">
+        <a id="p4w-previous-section" href="02-chat-messages.html" title="Previous: CHAT messages" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify iconify--fluent" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="fluent:chevron-left-24-filled" width="2rem" height="2rem">
                 <g fill="none">
                     <path d="M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0z" fill="currentColor">
@@ -277,14 +277,14 @@
                 </g>
             </svg>
         </a>
-        <a id="p4w-toc-link" href="../nav.html" title="Table of Contents" class="lightup">
+        <a id="p4w-toc-link" href="../nav.html" title="Table of Contents" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" width="2rem" height="2rem">
                 <g fill="none">
                     <path d="M3.5 16.5a1.5 1.5 0 1 1 0 3a1.5 1.5 0 0 1 0-3zm4 .5h13.503a1 1 0 0 1 .117 1.993l-.117.007H7.5a1 1 0 0 1-.116-1.993L7.5 17h13.503H7.5zm-4-6.5a1.5 1.5 0 1 1 0 3a1.5 1.5 0 0 1 0-3zm4 .5h13.503a1 1 0 0 1 .117 1.993l-.117.007H7.5a1 1 0 0 1-.116-1.993L7.5 11h13.503H7.5zm-4-6.492a1.5 1.5 0 1 1 0 2.999a1.5 1.5 0 0 1 0-3zM7.5 5h13.503a1 1 0 0 1 .117 1.993l-.117.007H7.5a1 1 0 0 1-.116-1.994l.116-.006h13.503H7.5z" fill="currentColor"></path>
                 </g>
             </svg>
         </a>
-        <a id="p4w-about-link" href="../about.html" title="About this publication" class="lightup">
+        <a id="p4w-about-link" href="../about.html" title="About this publication" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify iconify--fluent" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="fluent:book-information-24-filled" width="2rem" height="2rem">
                 <g fill="none">
                     <path d="M4 4.5A2.5 2.5 0 0 1 6.5 2H18a2.5 2.5 0 0 1 2.5 2.5v14.25a.75.75 0 0 1-.75.75H5.5a1 1 0 0 0 1 1h13.25a.75.75 0 0 1 0 1.5H6.5A2.5 2.5 0 0 1 4 19.5v-15zM12.25 8a1 1 0 1 0 0-2a1 1 0 0 0 0 2zm-.75 1.75v5a.75.75 0 0 0 1.5 0v-5a.75.75 0 0 0-1.5 0z" fill="currentColor">
