--- a/demos/action-for-heroes/text/05-the-ario.html
+++ b/demos/action-for-heroes/text/05-the-ario.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" type="text/css" href="../styles/a_default.css">
 
-    <script>document.documentElement.classList.add('js');</script>
+    <script>document.documentElement.classList.add('p4w-js');</script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <p>
       <span role="doc-pagebreak" id="page12" aria-label="12"></span>
     </p>
-    <h2 data-number="1.5" id="h-1.5">THE ARIO<a href="#h-1.5" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+    <h2 data-number="1.5" id="h-1.5">THE ARIO<a href="#h-1.5" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -36,7 +36,7 @@
         </svg></a></h2>
     <p>INFORMATION FOR ADULTS</p>
     <section id="adults-benefit-from-listening-to-children" class="level3" data-number="1.5.1">
-      <h3 data-number="1.5.1" id="h-1.5.1">ADULTS BENEFIT FROM LISTENING TO CHILDREN<a href="#h-1.5.1" class="selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
+      <h3 data-number="1.5.1" id="h-1.5.1">ADULTS BENEFIT FROM LISTENING TO CHILDREN<a href="#h-1.5.1" class="p4w-selflink"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" class="iconify">
             <g transform="rotate(135 12 12)">
                 <g fill="none">
                     <path d="M9 7a1 1 0 0 1 .117 1.993L9 9H7a3 3 0 0 0-.176 5.995L7 15h2a1 1 0 0 1 .117 1.993L9 17H7a5 5 0 0 1-.217-9.995L7 7h2zm8 0a5 5 0 0 1 .217 9.995L17 17h-2a1 1 0 0 1-.117-1.993L15 15h2a3 3 0 0 0 .176-5.995L17 9h-2a1 1 0 0 1-.117-1.993L15 7h2zM7 11h10a1 1 0 0 1 .117 1.993L17 13H7a1 1 0 0 1-.117-1.993L7 11h10H7z" fill="currentColor"></path>
@@ -75,7 +75,7 @@
  
     
     <nav aria-label="Sections" id="p4w-document-links">
-        <a id="previous-section" href="04-understanding-the-guide.html" title="Previous: Understanding the Guide" class="p4w-lightup">
+        <a id="p4w-previous-section" href="04-understanding-the-guide.html" title="Previous: Understanding the Guide" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify iconify--fluent" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="fluent:chevron-left-24-filled" width="2rem" height="2rem">
                 <g fill="none">
                     <path d="M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0z" fill="currentColor">
@@ -91,14 +91,14 @@
                 </g>
             </svg>
         </a>
-        <a id="p4w-toc-link" href="../nav.html" title="Table of Contents" class="lightup">
+        <a id="p4w-toc-link" href="../nav.html" title="Table of Contents" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" width="2rem" height="2rem">
                 <g fill="none">
                     <path d="M3.5 16.5a1.5 1.5 0 1 1 0 3a1.5 1.5 0 0 1 0-3zm4 .5h13.503a1 1 0 0 1 .117 1.993l-.117.007H7.5a1 1 0 0 1-.116-1.993L7.5 17h13.503H7.5zm-4-6.5a1.5 1.5 0 1 1 0 3a1.5 1.5 0 0 1 0-3zm4 .5h13.503a1 1 0 0 1 .117 1.993l-.117.007H7.5a1 1 0 0 1-.116-1.993L7.5 11h13.503H7.5zm-4-6.492a1.5 1.5 0 1 1 0 2.999a1.5 1.5 0 0 1 0-3zM7.5 5h13.503a1 1 0 0 1 .117 1.993l-.117.007H7.5a1 1 0 0 1-.116-1.994l.116-.006h13.503H7.5z" fill="currentColor"></path>
                 </g>
             </svg>
         </a>
-        <a id="p4w-about-link" href="../about.html" title="About this publication" class="lightup">
+        <a id="p4w-about-link" href="../about.html" title="About this publication" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify iconify--fluent" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="fluent:book-information-24-filled" width="2rem" height="2rem">
                 <g fill="none">
                     <path d="M4 4.5A2.5 2.5 0 0 1 6.5 2H18a2.5 2.5 0 0 1 2.5 2.5v14.25a.75.75 0 0 1-.75.75H5.5a1 1 0 0 0 1 1h13.25a.75.75 0 0 1 0 1.5H6.5A2.5 2.5 0 0 1 4 19.5v-15zM12.25 8a1 1 0 1 0 0-2a1 1 0 0 0 0 2zm-.75 1.75v5a.75.75 0 0 0 1.5 0v-5a.75.75 0 0 0-1.5 0z" fill="currentColor">
