--- a/demos/action-for-heroes/about.html
+++ b/demos/action-for-heroes/about.html
@@ -35,7 +35,7 @@
     
     <main>        
         <h1>About this publication</h1>
-        <img src="media/cover.png" alt="Cover image"></img>
+        <img src="media/cover.png,media/cover.png" alt="Cover image"></img>
         <ul>
             <li><span class="label">Title:</span> <span id="title">Action for Heros</span></li>
             <li><span class="label">Created by:</span> <span id="createdby">IASC</span></li>
