--- a/demos/mobydick/text/001-titlepage.html
+++ b/demos/mobydick/text/001-titlepage.html
@@ -38,7 +38,7 @@
     
  
     <section role="contentinfo" aria-label="Previous and next" id="p4w-document-links">
-        <a id="p4w-previous-section" href="../index.html" title="Previous: undefined" class="p4w-lightup">
+        <a id="p4w-previous-section" href="../index.html" title="Previous: Cover" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify iconify--fluent" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="fluent:chevron-left-24-filled" width="2em" height="2em">
                 <g fill="none">
                     <path d="M15.707 4.293a1 1 0 0 1 0 1.414L9.414 12l6.293 6.293a1 1 0 0 1-1.414 1.414l-7-7a1 1 0 0 1 0-1.414l7-7a1 1 0 0 1 1.414 0z" fill="currentColor">
@@ -46,7 +46,7 @@
                 </g>
             </svg>
         </a>
-        <a id="p4w-next-section" href="002-toc-short.html" title="Next: undefined" class="p4w-lightup">
+        <a id="p4w-next-section" href="002-toc-short.html" title="Next: Moby-Dick" class="p4w-lightup">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="p4w-iconify iconify--fluent" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" data-icon="fluent:chevron-right-24-filled" width="2em" height="2em">
                 <g fill="none">
                     <path d="M8.293 4.293a1 1 0 0 0 0 1.414L14.586 12l-6.293 6.293a1 1 0 1 0 1.414 1.414l7-7a1 1 0 0 0 0-1.414l-7-7a1 1 0 0 0-1.414 0z" fill="currentColor">
