Help updates and keyboard shortcut to access help page

--- a/demos/src/help/index.html
+++ b/demos/src/help/index.html
@@ -55,7 +55,7 @@
             <li><a href="#keyboard-shortcuts">Keyboard Shortcuts</a></li>
         </ul>
 
-        <h2>Overview</h2>
+        <h2 id="overview">Overview</h2>
         <p>This page will explain how to use the on-screen reading controls with this publication.</p>
         
         <figure>
@@ -70,7 +70,7 @@
             </figcaption>
         </figure>
 
-        <h2>Navigation Sidebar</h2>
+        <h2 id="navigation-sidebar">Navigation Sidebar</h2>
         <p>Use the navigation sidebar button to display the table of contents and other navigation-specific information.</p>
         <figure>
             <img src="screenshot-toc-2.png">
@@ -85,7 +85,7 @@
             </figcaption>
         </figure>
 
-        <h2>Settings</h2>
+        <h2 id="settings">Settings</h2>
         <p>Use the settings button to open the settings panel.</p>
         <figure>
             <img src="screenshot-settings.png">
@@ -98,7 +98,7 @@
             </figcaption>
         </figure>
         
-        <h2>Keyboard shortcuts</h2>
+        <h2 id="keyboard-shortcuts">Keyboard shortcuts</h2>
 
         <table>
             <thead>
@@ -143,8 +143,12 @@
                     <td>Previous phrase</td>
                 </tr>
                 <tr>
-                    <td><code>Ctrl</code> + <code>Alt</code> + <code>,</code></td>
+                    <td><code>Ctrl</code> + <code>Alt</code> + <code>, (comma)</code></td>
                     <td>Open settings panel</td>
+                </tr>
+                <tr>
+                    <td><code>Ctrl</code> + <code>Alt</code> + <code>H</code></td>
+                    <td>Open help page</td>
                 </tr>
             </tbody>
         </table>
