--- a/demos/action_for_heroes_epub/nav.html
+++ b/demos/action_for_heroes_epub/nav.html
@@ -9,7 +9,7 @@
 <body><nav id="p4w-list-of-navs"><ol><li><a href="#toc">Table of Contents</a></li><li><a href="#page-list">Pages</a></li></ol></nav>
     <nav id="toc" class="epubtype_toc">
         <ol>
-            <li><a href="000.html#dtb1" id="d4e21">Action for Heros</a></li>
+            <li><a href="index.html#dtb1" id="d4e21">Action for Heros</a></li>
             <li><a href="001.html#dtb3" id="d4e47">Action for Heroes</a>
                 <ol>
                     <li><a href="002.html#dtb5" id="d4e92">Introduction</a></li>
