--- a/demos/action_for_heroes_epub/about.html
+++ b/demos/action_for_heroes_epub/about.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="generatedBy" content="hand" />
-    <title>Action for Heroes : About</title>
-    <link rel="stylesheet" type="text/css" href="../styles/a_default.css">
-    <link rel="stylesheet" type="text/css" href="../styles/content.css">
-    <link rel="stylesheet" type="text/css" href="../styles/layout.css">
-    <link rel="stylesheet" type="text/css" href="../styles/theme.css">
+    <title>Action for Heroes: About</title>
+    <link rel="stylesheet" type="text/css" href="../src/styles/content.css">
+    <link rel="stylesheet" type="text/css" href="../src/styles/layout.css">
+    <link rel="stylesheet" type="text/css" href="../src/styles/theme.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <style>
       main {
         font-family: Arial, sans-serif;
