--- a/demos/action_for_heroes_epub/nav.html
+++ b/demos/action_for_heroes_epub/nav.html
@@ -2,10 +2,18 @@
 <html xml:lang="en-US" lang="en-US">
 
   <head>
+    <link rel="stylesheet" type="text/css" href="../src/styles/theme.css">
+    <link rel="stylesheet" type="text/css" href="../src/styles/content.css">
+    <link rel="stylesheet" type="text/css" href="../src/styles/nav.css">
+
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <meta charset="UTF-8">
     <meta name="dc:identifier" content="AUTO-UID-4754997194290171790">
 
-    <title>Action for Heroes </title>
+    <title>Action for Heroes : Navigation Document</title>
+
 
   </head>
 
