--- a/demos/src/help/index.html
+++ b/demos/src/help/index.html
@@ -97,7 +97,7 @@
             <figcaption>A page from a publication, with the main text slightly dimmed and the focus on the settings panel, which has the following options (top to bottom): 
                 <ul>
                     <li>Dark mode</li>
-                    <li>Scale</li>
+                    <li>Size</li>
                     <li>Playback Rate</li>
                 </ul>
             </figcaption>
