Conversion script renames links within the book to itself with the new filenames
Updated moby dick demo

--- a/demos/moby-dick/toc-short.html
+++ b/demos/moby-dick/toc-short.html
@@ -48,27 +48,27 @@
 
           <ol>
             <li class="toc-BookTitlePage-rw" id="toc-titlepage">
-              <a href="titlepage.xhtml">Title Page</a>
+              <a href="titlepage.html">Title Page</a>
             </li>
             <li class="toc-Preface-rw" id="toc-preface_001">
-              <a href="preface_001.xhtml">Original Transcriber’s Notes</a>
+              <a href="preface_001.html">Original Transcriber’s Notes</a>
             </li>
             <li class="toc-Introduction-rw" id="toc-introduction_001">
-              <a href="introduction_001.xhtml">Etymology</a>
+              <a href="introduction_001.html">Etymology</a>
             </li>
             <li class="toc-Epigraph-rw" id="toc-epigraph_001">
-              <a href="epigraph_001.xhtml">Extracts (<i>Supplied by a Sub-Sub-Librarian</i>)</a>
+              <a href="epigraph_001.html">Extracts (<i>Supplied by a Sub-Sub-Librarian</i>)</a>
             </li>
 
 
-            <li><a href="chapter_001.xhtml">Begin Reading <i>Moby-Dick</i></a></li>
+            <li><a href="chapter_001.html">Begin Reading <i>Moby-Dick</i></a></li>
 
-            <li><a id="displayText" href="toc.xhtml">Show detailed contents</a></li>
+            <li><a id="displayText" href="nav.html">Show detailed contents</a></li>
 
 
 
             <li>
-              <a href="copyright.xhtml">Copyright Page</a>
+              <a href="copyright.html">Copyright Page</a>
             </li>
           </ol>
 
